k8s/wordpress-persistent-disks/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetics.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
    - host: www.kubernetics.co.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wordpress
                port:
                  number: 80
  tls:
    - hosts:
        - kubernetics.co.uk
        - www.kubernetics.co.uk
      secretName: wordpress-tls
